--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<a href="contact.html">Contact</a>
 		</nav>
 
-		<img src="./images/boo.jpg"></img>
+		<img src="./boo.jpg"></img>
 
 		<p>Copyright Boo 2018. All rights reserved.</p>
 
